# certbot-dns-metaname

./: .gitignore  README.md  README.rst  entry_points.txt  install.sh  pyproject.toml  setup.py
certbot_dns_metaname/: __init__.py  dns_metaname.py  dns_metaname_test.py  metaname.py
