[tool.poetry]
name = "certbot_dns_metaname"
version = "0.1.4"
description = ""
authors = ["Taylor Kettle <tin.teapot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
certbot = "^0.34"
mock = "^4.0.3"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
